Fixed issues, testing on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2561,13 +2561,31 @@ input, select, textarea {
 
 /* Image */
 
-	.image {
+	.imageleft {
 		border-radius: 0.25em;
 		border: 0;
 		display: inline-block;
 		position: relative;
 		max-height: 30%;
 		max-width: 16%;
+		margin-left: 10%;
+	}
+	
+	.imageleft img {
+		border-radius: 0.25em;
+		display: block;
+	}
+
+	.image {
+		border-radius: 0.25em;
+		border: 0;
+		display: inline-block;
+		position: relative;
+		max-height: 30%;
+		max-width: 17%;
+		min-height: 30%;
+		min-width: 17%;
+		margin-left: 5%
 	}
 
 		.image img {
